The files have been modified

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="about-us">
         <div class="container">
           <div class="row">
-            <div class="col-lg-7">
+            <div class="col-lg-7 phot">
               <img src="images/section 02 illustration.png" alt="section 02">
             </div>
             <div class="col-lg-5 info">
